Use test types in UI + test processor and add pagination